@@ -168,7 +168,6 @@ function Db(databaseName, serverConfig, options) {
  * @ignore
  */
 var reaper = function(dbInstance, reaperInterval, reaperTimeout) {
-        // console.log("===================================== REAP 0")
   // Get current time, compare to reaper interval
   var currentTime = new Date().getTime();
   // Now calculate current time difference to check if it's time to reap
@@ -193,7 +192,8 @@ var reaper = function(dbInstance, reaperInterval, reaperTimeout) {
             && dbInstance._callBackStore.listeners(key).length > 0
             && typeof dbInstance._callBackStore.listeners(key)[0] == 'function') {
             dbInstance._callBackStore.emit(key, new Error("operation timed out"), null);            
-          } else {
+          } else if(dbInstance._callBackStore 
+            && dbInstance._callBackStore.listeners(key).length > 0) {
             console.log("================================================= _callBackStore listener not a function");
             console.dir(dbInstance._callBackStore.listeners(key));
           }
